adding pdf report and figures

--- a/ECIV767/HW1.ipynb
+++ b/ECIV767/HW1.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your data points from the digitizer\n",
+    "# Data points from the digitizer\n",
     "x = np.array([0.0010180097511801845, 0.0013070104796093687, 0.001590561212780344,\n",
     "              0.002042102417146829, 0.002529884971601279, 0.0030242671703095136,\n",
     "              0.004096407011113996, 0.005166284215610408, 0.005959280095830789,\n",
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "# Fit a polynomial of degree 4 (or try different degrees)\n",
+    "# Fit a polynomial of degree 4 \n",
     "degree = 4\n",
     "\n",
     "coefficients = np.polyfit(np.log10(x), np.log10(y), degree)\n",
@@ -122,7 +122,7 @@
     "print(\"Polynomial coefficients (in log-log space):\")\n",
     "print(poly)\n",
     "\n",
-    "# To print the equation explicitly\n",
+    "# Print the equation explicitly\n",
     "equation = \"\"\n",
     "for i, coef in enumerate(coefficients[::-1]):\n",
     "    if i == 0:\n",
@@ -155,7 +155,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Your empirical polynomial coefficients for log10(c_D) as a function of log10(Re_vp)\n",
+    "# Empirical polynomial coefficients for log10(c_D) as a function of log10(Re_vp)\n",
     "coefficients = [-0.004918, 0.02525, 0.1545, -1.372, 2.081]\n",
     "\n",
     "# Create a polynomial object in log-log space\n",
@@ -233,7 +233,7 @@
    ],
    "source": [
     "# Fit a polynomial to R_f vs Rep\n",
-    "degree = 4  # You can try other degrees as well\n",
+    "degree = 4  \n",
     "rf_poly_coefficients = np.polyfit(\n",
     "    np.log10(rep_values), np.log10(rf_values), degree)\n",
     "\n",
@@ -343,8 +343,7 @@
     }
    ],
    "source": [
-    "# Example specific Rep values for comparison (adjust based on homework instructions)\n",
-    "# These are placeholders; replace with actual Re_p values\n",
+    "# Example specific Rep values for comparison \n",
     "specific_rep = [65, 100, 250, 500, 1000, 2000, 16000]\n",
     "\n",
     "# Calculate R_f for both empirical and Dietrich formulas\n",
