updating homework1 solutions

--- a/CSCE883/homework1/Q1HW1_unmodified_data.ipynb
+++ b/CSCE883/homework1/Q1HW1_unmodified_data.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "S19NoedEyRFa"
       },
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "6FMEuUkcyn2Z"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "5vtTROG5ys9K"
       },
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -152,60 +152,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "K=1: Accuracy=1.0000000000000000\n",
-            "K=2: Accuracy=1.0000000000000000\n",
-            "K=3: Accuracy=1.0000000000000000\n",
-            "K=4: Accuracy=1.0000000000000000\n",
-            "K=5: Accuracy=1.0000000000000000\n",
-            "K=6: Accuracy=1.0000000000000000\n",
-            "K=7: Accuracy=1.0000000000000000\n",
-            "K=8: Accuracy=1.0000000000000000\n",
-            "K=9: Accuracy=1.0000000000000000\n"
+            "   K  No. of Correct Predictions  Accuracy\n",
+            "0  1                         461       1.0\n",
+            "1  2                         461       1.0\n",
+            "2  3                         461       1.0\n",
+            "3  4                         461       1.0\n",
+            "4  5                         461       1.0\n",
+            "5  6                         461       1.0\n",
+            "6  7                         461       1.0\n",
+            "7  8                         461       1.0\n",
+            "8  9                         461       1.0\n"
           ]
         }
       ],
       "source": [
         "k_values = [i for i in range(1, 10)]\n",
-        "accuracies = []\n",
+        "results = []\n",
         "\n",
         "for k in k_values:\n",
         "    knn = KNeighborsClassifier(n_neighbors=k, metric='euclidean')\n",
         "    knn.fit(X_train, y_train)\n",
         "    y_pred = knn.predict(X_test)\n",
+        "    correct_predictions = (y_test == y_pred).sum()\n",
         "    acc = accuracy_score(y_test, y_pred)\n",
-        "    accuracies.append(acc)\n",
-        "    print(f\"K={k}: Accuracy={acc:.16f}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bH6Jxem5zyZH",
-        "outputId": "14ac1949-3c47-43f3-c850-a00fc8eb77c5"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "3.6216      461\n",
-            "8.6661      461\n",
-            "-2.8073     461\n",
-            "-0.44699    461\n",
-            "3.8644      909\n",
-            "3.7061      909\n",
-            "0.70403     909\n",
-            "0.35214     909\n",
-            "dtype: int64\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(combined_data.isna().sum())\n"
+        "    results.append((k, correct_predictions, acc))\n",
+        "\n",
+        "results_df = pd.DataFrame(results, columns=['K', 'No. of Correct Predictions', 'Accuracy'])\n",
+        "print(results_df)"
       ]
     },
     {
@@ -303,7 +276,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
